testsuite/poke.pkl/funcall-def-diag-9.pk
/* { dg-do compile } */

defun foo = (int[2] a = [1,2,3]) void: {} /* { dg-error "" } */
